# AlgebraEngine

./: .gitignore  7klas.cpp  7klas.hpp  CMakeLists.txt  ChooseList.hpp  CoefDescriptor.hpp  CompoundExpression.cpp  CompoundExpression.h  CompoundInequation.cpp  CompoundInequation.h  CompoundInequationDescriptor.h  Debug.cpp  Debug.hpp  Equation.hpp  EquationDescriptor.hpp  Expression.hpp  ExpressionDescriptor.hpp  FracEquation.cpp  FracEquation.h  FracEquationDescriptor.h  Fraction.hpp  Generator.cpp  Generator.hpp  Inequation.hpp  InequationDescriptor.hpp  Interface.cpp  Interface.hpp  Interval.hpp  Monomial.cpp  Monomial.hpp  Node.cpp  Node.h  Node_print.cpp  Number.cpp  Number.hpp  Polynomial.cpp  Polynomial.hpp  README.md  RNG.cpp  RNG.hpp  (+8 more)
cpp/: CMakeLists.txt  EquationDescriptor.hpp  Expression.hpp  Generator.cpp  Interface.cpp  Number.cpp  Polynomial.cpp  Simple.cpp  Simple.hpp  main.cpp
